# projectone

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_project.ps1
src/: main.py  utils.py
src/templates/: 404.html  feature1.html  feature2.html  feature3.html  index.html
tests/: test_main.py  test_utils.py
